# considerate-centaur

./: .gitignore  CLAUDE.md  CONSTITUTION.md  TODO.md
.github/: copilot-instructions.md
.github/workflows/: gradle-build-matrix.yml  pull-doc-gen.yml  pull-sync.yml
actions/gradle-info/: action.yml
actions/gradle-publish/: action.yml
actions/gradle-setup/: action.yml
actions/gradle-tag/: action.yml
actions/gradle-test/: action.yml
companion-app/: Cargo.toml
companion-app/data/curriculum/: bosses.json  skill-tree.json
companion-app/data/curriculum/assignment-templates/: deductive-reasoning.json  pattern-matching.json  sequence-puzzle.json
companion-app/src/: lib.rs  lock.rs  main.rs
companion-app/src/assignments/: adaptation.rs  mod.rs
companion-app/src/claude/: mod.rs  prompts.rs  schemas.rs
companion-app/src/dashboard/: mod.rs
companion-app/src/gamification/: mod.rs
companion-app/src/learner/: mod.rs  profile.rs
companion-app/src/offline/: mod.rs
companion-app/src/onboarding/: mod.rs
companion-app/src/progress/: mod.rs  spaced.rs  tracker.rs
companion-app/src/session/: mod.rs
companion-app/tests/: assignment_tests.rs  claude_tests.rs  dashboard_tests.rs  learner_profile_tests.rs  offline_tests.rs  onboarding_tests.rs  progress_tests.rs  session_tests.rs
docs/: assignment-system.md  claude-integration.md  dashboard.md  data-model.md  gamification.md  offline-resilience.md  onboarding.md  privacy.md  session-format.md  spaced-repetition.md
sync-service/: build.gradle  settings.gradle
(+4 files in other folders)
